<feat> (Soluções): começando o componente Soluções

--- a/site_signal/src/components/button.css
+++ b/site_signal/src/components/button.css
@@ -7,6 +7,7 @@
   filter: contrast(10);
   border: 1px solid #fff;
   overflow: hidden;
+  margin-bottom: 0px;
 }
 .s-pesoduSlice::before {
   content: "";
