--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -4,9 +4,25 @@
 * {
     padding: 0; /*Padding: espaçamento interno*/
     margin: 0; /*Margem: espaçamento externo*/
-    color: #9C9C9C;
+    color: white;
 }
 
+.title {
+    font-family:"Scada";
+    font-size: 48px;
+    font-weight: bold;
+    color: #610C7D;
+    text-align: center;
+}
+
+h2 {
+    color: #9C9C9C;
+    font-family:"Saira";
+    font-size: 32px;
+    text-align: center;
+}
+
+/* Estilização do container de particulas */
 #tsparticles {
     width: 100%;
     height: 95%;
@@ -14,10 +30,7 @@
     z-index: -1;
 }
 
-h1 {
-    color: black
-}
-
+/* Estilização do Carrosel */
 .carousel-indicators [data-bs-target] {
     width: 16px !important;
     height: 16px !important;
@@ -28,7 +41,26 @@ h1 {
 
 /* Botoes */
 
-.botaoTipo1 {
+.buttonPurple {
+    margin-right: 44px;
+    color: black;
+    text-decoration: none;
+    border: 2px solid #8700A9;
+    border-radius: 30px;
+    padding: 4px 40px 4px 40px;
+}
+
+.buttonPurple:hover {
+    margin-right: 44px;
+    color: white;
+    background-color: #8700A9;
+    text-decoration: none;
+    border: 2px solid #8700A9;
+    border-radius: 30px;
+    padding: 4px 40px 4px 40px;
+}
+
+.buttonWhite {
     margin-right: 44px;
     color: white;
     text-decoration: none;
@@ -37,7 +69,7 @@ h1 {
     padding: 4px 40px 4px 40px;
 }
 
-.botaoTipo1:hover {
+.buttonWhite:hover {
     margin-right: 44px;
     color: #8700A9;
     background-color: white;
@@ -46,3 +78,7 @@ h1 {
     border-radius: 30px;
     padding: 4px 40px 4px 40px;
 }
+
+/* Text Input */
+
+/*Modifique a partir daqui */
