--- a/site_signal/src/components/Solutions/solutions.css
+++ b/site_signal/src/components/Solutions/solutions.css
@@ -7,23 +7,7 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    margin-top: 250px;
-}
-
-.solutionsBackGround h1 {
-    color: #610C7D;
-    font-family: "Scada";
-    font-weight: bolder;
-    text-align: center;
-}
-
-.solutionsBackGround p {
-    color: #9C9C9C;
-    font-family: "Saira";
-    font-size: 23px;
-    font-weight: lighter;
-    text-align: center;
-    margin-bottom: 0px;
+    padding-top: 250px;
 }
 
 .solutionsContainerButtons{
@@ -63,12 +47,6 @@
 .solutionsTitle{
     width: fit-content;
     border-bottom: #610C7D 10px solid
-}
-
-.solutionsTitle h1{
-    color: #610C7D;
-    font-family: "Scada";
-    font-size: 40px;
 }
 
 .solutionsContainerText p{
