--- a/site_signal/src/screens/home.css
+++ b/site_signal/src/screens/home.css
@@ -1,3 +1,52 @@
+/* Banner */
+
+.bannerTextContainer {
+    display: flex; 
+    align-items: center; 
+    margin-left: 96px;
+}
+
+.bannerTextContainer h1 {
+    color: white;
+    font-family: "Scada";
+    font-size: 72px; 
+    font-weight: bold;
+}
+
+.bannerTextContainer p {
+    margin-top: 20px;
+    color: white;
+    font-family: "Saira";
+    font-size: 28px;
+}
+
+.bannerImg {
+    height: 816px;
+    position: relative
+}
+
+.bannerSocialMediaContainer {
+    margin-right: 96px;
+    z-index: 1;
+}
+
+.bannerSocialMediaContainer p {
+    font-family: "Saira"; 
+    font-size: 26px;
+    font-weight: bold;
+    writing-mode:vertical-rl;
+    color: white;
+}
+
+.bannerBorder {
+    width: 100%; 
+    position: absolute; 
+    margin-top: 23%;
+}
+
+
+/* Sobre Nós */
+
 .aboutContainer{
     width: 100%;
     height: 666px;
@@ -58,3 +107,13 @@
 
 }
 
+/* Depoimentos */
+
+.testimonialsContainer {
+    margin-top: 48px;
+}
+
+.testimonialsTextContainer {
+    text-align: center;
+    padding-bottom: 24px;
+}
