--- a/site_signal/src/components/Contact/contact.css
+++ b/site_signal/src/components/Contact/contact.css
@@ -1,6 +1,7 @@
 .contactBackGround {
     display: flex;
     width: 100%;
+    padding-top: 3%;
     background-image: linear-gradient(#8700A9, #980089);
 	justify-content: space-evenly;
 }
@@ -19,14 +20,19 @@
 }
 
 .contactForm h1{
-    font-size: 40;
-    font-family: "Saira";
+    color: white;
+    font-family:"Saira";
+    font-size: 40px;
+    text-align: center;
+    font-weight: 800;
 }
+
 
 .contactForm p{
     font-weight: lighter;
-    font-size: 20;
+    font-size: 20px;
     font-family: "Saira";
+    text-align: center;
 }
 
 .contactForm input{
