--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -22,12 +22,15 @@ h2 {
     text-align: center;
 }
 
+img, a {
+    z-index: 1;
+}
+
 /* Estilização do container de particulas */
-#tsparticles {
+.tsparticles {
     width: 100%;
-    height: 95%;
-    position: absolute;
-    z-index: -1;
+    position: fixed;
+    z-index: 0;
 }
 
 /* Estilização do Carrosel */
@@ -48,6 +51,7 @@ h2 {
     border: 2px solid #8700A9;
     border-radius: 30px;
     padding: 4px 40px 4px 40px;
+    z-index: 1;
 }
 
 .buttonPurple:hover {
@@ -67,6 +71,7 @@ h2 {
     border: 2px solid white;
     border-radius: 30px;
     padding: 4px 40px 4px 40px;
+    z-index: 1;
 }
 
 .buttonWhite:hover {
