style(footer): ajuste das bordas do componente

--- a/site_signal/src/components/Footer/footer.css
+++ b/site_signal/src/components/Footer/footer.css
@@ -33,7 +33,14 @@
 
 .footerBorder {
     width: 100%;
-    position: absolute;
+    position: relative;
+    margin-bottom: -580px;
+    -webkit-user-drag: none;  
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .footerPages {
