--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -5,6 +5,7 @@
     padding: 0; /*Padding: espaçamento interno*/
     margin: 0; /*Margem: espaçamento externo*/
     color: white;
+    z-index: 1;
 }
 
 .title {
@@ -13,6 +14,7 @@
     font-weight: bold;
     color: #610C7D;
     text-align: center;
+    padding-bottom: 24px;
 }
 
 h2 {
@@ -22,13 +24,10 @@ h2 {
     text-align: center;
 }
 
-img, a {
-    z-index: 1;
-}
-
 /* Estilização do container de particulas */
 .tsparticles {
     width: 100%;
+    height: 100%;
     position: fixed;
     z-index: 0;
 }
