--- a/site_signal/src/screens/home.css
+++ b/site_signal/src/screens/home.css
@@ -3,7 +3,6 @@
 .bannerContainer {
     background-color: #610C7D;
     z-index: -1;
-    height: 95%;
 }
 
 .bannerTextContainer {
@@ -33,7 +32,6 @@
 
 .bannerSocialMediaContainer {
     margin-right: 96px;
-    z-index: 1;
 }
 
 .bannerSocialMediaContainer p {
@@ -46,8 +44,15 @@
 
 .bannerBorder {
     width: 100%; 
-    position: absolute; 
-    margin-top: 23%;
+    position: relative;
+    margin-top: -25.5%;
+    z-index: 0;
+    -webkit-user-drag: none;  
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 
@@ -117,9 +122,5 @@
 
 .testimonialsContainer {
     margin-top: 48px;
-}
-
-.testimonialsTextContainer {
-    text-align: center;
-    padding-bottom: 24px;
+    position: relative;
 }
