--- a/site_signal/src/components/Solutions/solutions.css
+++ b/site_signal/src/components/Solutions/solutions.css
@@ -7,7 +7,8 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    padding: 2%;
+    margin-top: -392px;
+    padding-top: 244px;
 }
 
 .solutionsContainerButtons{
