--- a/site_signal/src/components/Contact/contact.css
+++ b/site_signal/src/components/Contact/contact.css
@@ -4,11 +4,11 @@
     background-image: linear-gradient(#8700A9, #980089);
 	justify-content: space-evenly;
     align-items: center;
+    height: 850px;
 }
 
 #contactImg {
-    width: 560;
-    height: 560;
+    width: 630px;
     margin-top: 30;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .contactForm h1{
-    font-size: 40px;
+    font-size: 50px;
     font-family: "Saira";
     font-weight: bold;
 }
@@ -35,7 +35,7 @@
 .contactForm input{
     border-radius: 18px;
 	height: 50px;
-	width: 520px;
+	width: 540px;
 	outline: none;
     border: #610C7D 3px solid;
 	padding-left: 15px;
@@ -53,7 +53,7 @@
     border-radius: 18px;
     padding-top: 16px;
 	height: 120px;
-	width: 520px;
+	width: 540px;
 	outline: none;
     border: #610C7D 3px solid;
 	padding-left: 15px;
