--- a/site_signal/src/components/Contact/contact.css
+++ b/site_signal/src/components/Contact/contact.css
@@ -4,11 +4,12 @@
     background-image: linear-gradient(#8700A9, #980089);
 	justify-content: space-evenly;
     align-items: center;
-    height: 850px;
+    padding-top: 72px;
+    padding-bottom: 72px;
 }
 
 #contactImg {
-    width: 630px;
+    width: 640px;
     margin-top: 30;
 }
 
@@ -19,7 +20,7 @@
     color: white;
 }
 
-.contactForm h1{
+.contactForm h1 {
     font-size: 50px;
     font-family: "Saira";
     font-weight: bold;
