--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -92,6 +92,22 @@ h2 {
     background-color: white;
 }
 
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .title {
+        font-size: 28px;
+    }
+
+    .subtitle {
+        font-size: 20px;
+    }
+
+    .buttonWhite {
+        border: 1px solid white;
+        font-size: 12px;
+    }
+}
+
 /* Text Input */
 
 /*Modifique a partir daqui */
