--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -105,6 +105,7 @@ h2 {
     .buttonWhite {
         border: 1px solid white;
         font-size: 12px;
+        padding: 8px 32px 8px 32px;
     }
 }
 
