--- a/site_signal/src/components/Testimonial/testimonial.css
+++ b/site_signal/src/components/Testimonial/testimonial.css
@@ -28,7 +28,7 @@
     margin-top: 16px;
 }
 
-/* Responsividade: Mobile */
+/* Responsividade */
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
@@ -67,4 +67,53 @@
     }
 
 
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .testimonialAvatar {
+        align-self: flex-start;
+    }
+
+    .testimonialAvatar img {
+        position: absolute;
+        margin-left: 16px;
+        height: 80px;
+    }
+
+    .testimonialCard h1 {
+        font-size: 40px;
+        margin-left: 96px;
+    }
+
+    .testimonialCard p:first-of-type {
+        font-size: 24px;
+        margin-left: 96px;
+        margin-top: 8px;
+    }
+
+    .testimonialCard p {
+        font-size: 22px;
+        margin-top: 0%;
+     }
+
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .testimonialAvatar img {
+        height: 224px;
+    }
+
+    .testimonialCard p {
+        font-size: 22px;
+        margin-top: 0%;
+     }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+
+    .testimonialCard p {
+        font-size: 24px;
+        margin-top: 0%;
+     }
 }
