--- a/site_signal/src/screens/home.css
+++ b/site_signal/src/screens/home.css
@@ -103,8 +103,12 @@
         display: none;
     }
 
+    #headerImg {
+        display: none;
+    }
+
     .headerSocialMediaContainer {
-        margin-right: 2%;
+        display: none;
     }
 
 }
