style(header + footer): correções para responsividade

--- a/site_signal/src/components/Footer/footer.css
+++ b/site_signal/src/components/Footer/footer.css
@@ -133,6 +133,12 @@
 
 }
 
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .footerBorder {
+        margin-bottom: -540px;
+    }
+}
+
 /* Responsividade: Laptops */
 
 @media screen and (min-width: 769px) and (max-width: 1200px) {
@@ -156,5 +162,14 @@
 
     .footerBorder {
         margin-bottom: -560px;
+    }
+}
+
+/* Responsividade: Ultrawide */
+
+@media screen and (min-width: 2400px) {
+
+    .footerBorder {
+        margin-bottom: -580px;
     }
 }
