--- a/site_signal/src/screens/css/home.css
+++ b/site_signal/src/screens/css/home.css
@@ -82,6 +82,10 @@
     .headerSocialMediaContainer {
         display: none;
     }
+
+    .headerBorder {
+        margin-top: -26%;
+    }
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -111,6 +115,10 @@
         display: none;
     }
 
+    .headerBorder {
+        margin-top: -25.6%;
+    }
+
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -136,6 +144,10 @@
         margin-right: 2%;
     }
 
+    .headerBorder {
+        margin-top: -25.6%;
+    }
+
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
@@ -159,6 +171,10 @@
 
     .headerSocialMediaContainer {
         margin-right: 2%;
+    }
+
+    .headerBorder {
+        margin-top: -25.6%;
     }
 
 }
