--- a/site_signal/src/screens/css/home.css
+++ b/site_signal/src/screens/css/home.css
@@ -57,6 +57,7 @@
 
 /* Responsividade - Header */
 
+/** Mobile **/
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
     .headerTextContainer {
@@ -88,6 +89,7 @@
     }
 }
 
+/** Tablets **/
 @media screen and (min-width: 481px) and (max-width: 768px) {
 
     .headerContainer {
@@ -121,6 +123,7 @@
 
 }
 
+/** Laptops **/
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
     .headerContainer {
@@ -150,6 +153,7 @@
 
 }
 
+/** Laptops: Large Screen **/
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
 
     .headerContainer {
@@ -178,6 +182,7 @@
     }
 
 }
+
 
 /* Sobre Nós */
 
@@ -212,6 +217,7 @@
     margin-right: 72px;
 }
 
+
 /* Depoimentos */
 
 .testimonialsContainer {
@@ -225,58 +231,101 @@
     position: relative;
 }
 
-.partnersImagesOne {
-    width: auto;
+.partnersContainer h1 {
+    margin-top: 48px;
+}
+
+.partnersLogo div {
     text-align: center;
-    margin-right: auto;
 }
 
-.partnersImagesTwo {
-    width: auto;
-    text-align: center;
-   
+.partnersLogo img {
+    width: 180px;
+    margin-right: 72px;
+    margin-bottom: 32px;
 }
 
-.partnerImg {
-    margin-right: 48px;
+#brasilJrMark {
+    width: 240px;
 }
 
-/* Responsividade */
+#totvsMark {
+    width: 360px;
+    margin-right: 0;
+}
 
-/* 320px — 480px: Mobile devices
-481px — 768px: iPads, Tablets
-769px — 1024px: Small screens, laptops
-1025px — 1200px: Desktops, large screens
-1201px and more —  Extra large screens, TV */
+.partnersLogo div:last-child img {
+    width: 480px;
+}
 
-@media screen and (min-width: 551px) and (max-width: 768px) {
+#americanasMark {
+    margin-right: 0;
+}
 
-    .partnersImages {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-between;
-        padding: 5%;
+/* Responsividade - Parceiros */
+
+/** Mobile **/
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .partnersContainer {
+        margin-bottom: -204px;
+    }
+
+    .partnersLogo img {
+        width: 56px;
+        margin-right: 32px;
+    }
+
+    #brasilJrMark {
+        width: 72px;
+    }
+
+    #totvsMark {
+        width: 92px;
     }
     
-    .partnerImg {
-        width: 25%;
-        margin-right: 2%;
-        margin-left: 2%;
+    .partnersLogo div:last-child img {
+        width: 180px;
     }
 
-    #TOTVS {
-        margin-top: 6%;
-        width: 25%;
+}
+
+/** Tablets **/
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .partnersContainer {
+        margin-bottom: -172px;
     }
 
-    #Empower {
-        margin-top: 6%;
-        width: 28%;
+    .partnersLogo img {
+        width: 124px;
+        margin-right: 32px;
     }
 
-    #Americanas {
-        margin-top: 6%;
-        width: 35%;
+    #brasilJrMark {
+        width: 156px;
     }
-} 
+
+    #totvsMark {
+        width: 180px;
+    }
+    
+    .partnersLogo div:last-child img {
+        width: 320px;
+    }
+    
+}
+
+/** Laptops **/
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+
+    .partnersContainer {
+        margin-bottom: -108px;
+    }
+    
+    .partnersLogo img {
+        width: 124px;
+        margin-right: 32px;
+    }
+
+}
