--- a/site_signal/src/components/Footer/footer.css
+++ b/site_signal/src/components/Footer/footer.css
@@ -167,9 +167,23 @@
 
 /* Responsividade: Ultrawide */
 
-@media screen and (min-width: 2400px) {
+@media screen and (min-width: 1920px) and (max-width: 2100px) {
 
     .footerBorder {
-        margin-bottom: -580px;
+        margin-bottom: -610px;
+    }
+}
+
+@media screen and (min-width: 2101px) and (max-width: 2300px) {
+
+    .footerBorder {
+        margin-bottom: -650px;
+    }
+}
+
+@media screen and (min-width: 2301px) and (max-width: 2600px) {
+
+    .footerBorder {
+        margin-bottom: -690px;
     }
 }
