--- a/site_signal/src/screens/css/home.css
+++ b/site_signal/src/screens/css/home.css
@@ -228,6 +228,9 @@
     display: none;
 }
 
+/* Responsividade - Sobre Nós */
+
+/** Mobile **/
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
     .aboutImg {
@@ -350,6 +353,11 @@
 
     .partnersContainer {
         margin-bottom: -204px;
+    }
+
+    .partnersLogo{
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .partnersLogo img {
