--- a/site_signal/src/components/TeamList/teamList.css
+++ b/site_signal/src/components/TeamList/teamList.css
@@ -17,15 +17,19 @@
     height: 256px;
     width: 256px;
     background-size: cover;
-    margin-right: 72px;
+    margin-left: 40px;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-radius: 5px;
+    float: left;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
 }
 
 .memberCard:hover {
     box-shadow: inset 0 0 0 1000px rgba(135, 0, 169, 0.7);
+    transition: box-shadow 2s;
 }
 
 .memberInfo {
@@ -66,8 +70,10 @@
 #subscription {
     display: flex;
     justify-content: end;
+    position: initial;
     margin-top: 144px;
     padding-bottom: 124px;
     margin-bottom: -18%;
+    clear: both;
 }
 
