--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -49,7 +49,7 @@
     border: 2px solid #8700A9;
     border-radius: 30px;
     padding: 4px 40px 4px 40px;
-    z-index: 1;
+    z-index: 2;
     font-family: "Saira";
     font-size: 28px;
 }
@@ -66,7 +66,7 @@
     border: 2px solid #8700A9;
     border-radius: 30px;
     padding: 8px 40px 8px 40px;
-    z-index: 1;
+    z-index: 2;
     font-family: "Saira";
     font-size: 28px;
 }
@@ -76,13 +76,18 @@
     background-color: #6A0085;
 }
 
+.buttonPurple2 img {
+    width: 20px;
+    margin-left: 8px;
+}
+
 .buttonWhite {
     color: white;
     text-decoration: none;
     border: 2px solid white;
     border-radius: 30px;
     padding: 8px 40px 8px 40px;
-    z-index: 1;
+    z-index: 2;
     background: none;
     font-family: "Saira";
     font-size: 28px;
