--- a/site_signal/src/components/TeamList/teamList.css
+++ b/site_signal/src/components/TeamList/teamList.css
@@ -21,19 +21,21 @@
     margin-bottom: 40px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     border-radius: 5px;
     float: left;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+    transition: transform 1s;
 }
 
 .memberCard:hover {
     box-shadow: inset 0 0 0 1000px rgba(135, 0, 169, 0.7);
-    transition: box-shadow 2s;
+    transform: scale(1.1);
 }
 
 .memberInfo {
     text-align: center;
+    margin: auto 0;
     color: white;
     display: none;
     font-family: Scada;
@@ -51,13 +53,25 @@
 .memberSocialMedia {
     display: none;
     text-align: center;
-
+    margin-top: -40px;
+    margin-bottom: 8px;
 }
 
 .memberSocialMedia img {
     margin-right: 16px;
+}
+
+/* Correção de diferença de tamanho */
+.linkedinIcon {
     width: 28px;
 }
+.githubIcon {
+    width: 24px;
+}
+.instagramIcon {
+    width: 26px;
+}
+/* --------------------------------- */
 
 .memberCard:hover .memberInfo {
     display: block;
@@ -73,7 +87,7 @@
     position: initial;
     margin-top: 144px;
     padding-bottom: 124px;
-    margin-bottom: -18%;
+    margin-bottom: -22%;
     clear: both;
 }
 
