--- a/site_signal/src/components/Testimonial/testimonial.css
+++ b/site_signal/src/components/Testimonial/testimonial.css
@@ -7,6 +7,12 @@
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
 }
 
+.testimonialAvatar img {
+    width: 296px;
+    border-radius: 296px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
+}
+
 .testimonialCard h1 {
     font-family: "Scada";
     font-size: 48px;
@@ -44,7 +50,7 @@
     .testimonialAvatar img {
         position: absolute;
         margin-left: 16px;
-        height: 64px;
+        width: 64px;
     }
 
     .testimonialCard h1 {
