--- a/site_signal/src/components/Solutions/solutions.css
+++ b/site_signal/src/components/Solutions/solutions.css
@@ -1,3 +1,12 @@
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .solutionsContainer {
     display: flex;
     background-image: url("../../assets/imgs/solucoesBackground.png");
