--- a/site_signal/src/components/Testimonial/testimonial.css
+++ b/site_signal/src/components/Testimonial/testimonial.css
@@ -84,7 +84,7 @@
     .testimonialAvatar img {
         position: absolute;
         margin-left: 16px;
-        height: 80px;
+        width: 80px;
     }
 
     .testimonialCard h1 {
@@ -103,23 +103,23 @@
         margin-top: 0%;
      }
 
+    .quotationMark {
+        display: none;
+    }
+
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1200px) {
     .testimonialAvatar img {
-        height: 224px;
+        width: 172px;
     }
 
     .testimonialCard p {
         font-size: 22px;
         margin-top: 0%;
-     }
-}
+    }
 
-@media screen and (min-width: 1025px) and (max-width: 1200px) {
-
-    .testimonialCard p {
-        font-size: 24px;
-        margin-top: 0%;
-     }
+     .quotationMark {
+        width: 48px;
+    }
 }
