--- a/site_signal/src/components/AboutMEJ/about-mej.css
+++ b/site_signal/src/components/AboutMEJ/about-mej.css
@@ -5,6 +5,7 @@
     padding-right: 96px;
     padding-left: 96px;
     font-size: 24px;
+    align-items: center;
 }
 
 .aboutMEJContainer div:first-of-type {
