--- a/site_signal/src/components/Navbar/navbar.css
+++ b/site_signal/src/components/Navbar/navbar.css
@@ -161,6 +161,10 @@
 @media screen and (min-width: 320px) and (max-width: 768px) {
 
     #menuToggle {
+        display: block;
+    }
+    
+    #navbarMenu a {
         display: none;
     }
 
