--- a/site_signal/src/components/AboutMEJ/about-mej.css
+++ b/site_signal/src/components/AboutMEJ/about-mej.css
@@ -2,8 +2,7 @@
     display: flex;
     text-align: right;
     color: #9C9C9C;
-    padding-right: 96px;
-    padding-left: 96px;
+    padding: 0 96px 96px 64px;
     font-size: 24px;
     align-items: center;
 }
