--- a/site_signal/src/components/TeamPage/AboutMEJ/about-mej.css
+++ b/site_signal/src/components/TeamPage/AboutMEJ/about-mej.css
@@ -1,8 +1,9 @@
 .aboutMEJContainer {
+    position: relative;
     display: flex;
     text-align: right;
     color: #9C9C9C;
-    padding: 0 96px 96px 64px;
+    padding: 0 96px 96px 128px;
     font-size: 24px;
     align-items: center;
 }
