--- a/site_signal/src/components/TeamPage/TeamList/teamList.css
+++ b/site_signal/src/components/TeamPage/TeamList/teamList.css
@@ -1,4 +1,5 @@
 .teamListContainer {
+    position: relative;
     padding: 32px 10% 0 10%;
     background-repeat: no-repeat;
     background-color: #F6F6F6;
@@ -86,8 +87,8 @@
     justify-content: end;
     position: initial;
     margin-top: 144px;
-    padding-bottom: 200px;
-    margin-bottom: -22%;
+    padding-bottom: 240px;
+    margin-bottom: -18%;
     clear: both;
 }
 
