--- a/site_signal/src/components/TeamPage/AboutUs/about-us.css
+++ b/site_signal/src/components/TeamPage/AboutUs/about-us.css
@@ -61,6 +61,15 @@
         width: 70px;
     }
     .aboutContent h1{
-        margin-top: -60px;
+        margin-top: -65px;
+    }
+}
+
+@media (max-width: 320px) {
+    .aboutUsTitleImg img{
+        display: none;
+    }
+    .aboutContent h1{
+        margin-top: 0px;
     }
 }
