--- a/site_signal/src/components/TeamPage/TeamList/teamList.css
+++ b/site_signal/src/components/TeamPage/TeamList/teamList.css
@@ -15,12 +15,13 @@
     margin-bottom: 48px;
 }
 
+/* Desktop */
+
 .memberCard {
-    height: 256px;
-    width: 256px;
+    height: 200px;
+    width: 200px;
     background-size: cover;
-    margin-left: 40px;
-    margin-bottom: 40px;
+    margin: 0 20px 40px 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -43,6 +44,7 @@
 }
 
 .memberInfo h3 {
+    font-size: 20px;
     font-weight: bold;
 }
 
@@ -92,3 +94,158 @@
     clear: both;
 }
 
+/* Mobile */ 
+
+.memberList {
+    display: none;
+    text-align: left;
+    margin-bottom: 8px;
+}
+
+.memberListAvatar img {
+    width: 56px;
+    height: 56px;
+    border-radius: 56px;
+    margin-right: 16px;
+}
+
+.memberList h3 {
+    font-family: "Scada";
+    font-size: 20px;
+    font-weight: bold;
+    color: #610C7D;
+}
+
+.memberList p {
+    font-family: "Saira";
+    font-weight: lighter;
+}
+
+.memberListInfoContainer {
+    flex-grow: 100;
+}
+
+.memberListInfo {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.memberListSocialMedia img {
+    margin: 0px 10px 12px 10px;
+}
+
+.listContainer::-webkit-scrollbar {
+    display: none;
+}
+
+/* Responsividade: Mobile */
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .memberCard {
+        display: none;
+    }
+
+    .memberList {
+        display: flex;
+    }
+
+    .teamListContainer {
+        padding-left: 7%;
+        padding-right: 0;
+        background-size: 0;
+    }
+
+    .teamListContainer h1 {
+        margin-bottom: 16px;
+    }
+
+    .listContainer {
+        height: 516px;
+        overflow: auto;
+    }
+
+    #subscription {
+        margin-top: 32px;
+        padding-bottom: 48px;
+        padding-right: 5%;
+        margin-bottom: -60%;
+    }
+
+    #subscription a {
+        font-size: 16px;
+    }
+
+}
+
+/** Responsividade: Tablets **/
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .memberCard {
+        display: none;
+    }
+
+    .memberList {
+        display: flex;
+    }
+
+    .teamListContainer {
+        padding-left: 7%;
+        padding-right: 0;
+        background-size: 0;
+    }
+
+    .teamListContainer h1 {
+        font-size: 40px;
+    }
+
+    .memberListAvatar img {
+        width: 72px;
+        height: 72px;
+        border-radius: 72px;
+    }
+
+    .memberList h3 {
+        font-size: 24px;
+    }
+
+    .memberList p {
+        font-size: 18px;
+    }
+
+    #subscription {
+        margin-top: 32px;
+        padding-bottom: 72px;
+        padding-right: 5%;
+        margin-bottom: -39%;
+    }
+
+    .listContainer {
+        height: 516px;
+        overflow: auto;
+    }
+
+}
+
+/** Responsividade: Laptops **/
+
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+
+    .memberCard {
+        width: 172px;
+        height: 172px;
+    }
+
+    #subscription {
+        display: flex;
+        justify-content: end;
+        position: initial;
+        margin-top: 144px;
+        padding-bottom: 200px;
+        padding-right: 2%;
+        margin-bottom: -50%;
+        clear: both;
+    }
+}
