--- a/site_signal/src/components/TeamPage/CoreValues/core-values.css
+++ b/site_signal/src/components/TeamPage/CoreValues/core-values.css
@@ -1,18 +1,4 @@
-.sectionBorder img {
-    width: 100%;
-    position: relative;
-    z-index: -1;
-    margin-top: -20%;
-    margin-bottom: -25%;
-    -webkit-user-drag: none;  
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
-}
-
 .coreValuesContainer {
-    position: relative;
     background-color: #F6F6F6;
     background-image: url("../../../assets/svg/img.core-values-bg.svg");
     background-position: right;
@@ -27,4 +13,83 @@
     padding-top: 32px;
     padding-bottom: 64px;
     justify-content: center;
+}
+
+.valueCardsContainerMobile {
+    display: none;
+}
+
+.valueCardsSelection {
+    display: flex;
+    justify-content: center;
+}
+
+.valueCardsSelection p {
+    font-family: 'Scada';
+    font-weight: bolder;
+    font-size: 12px;
+    color: #707070;
+    margin-top: 8px;
+}
+
+.valueCardsSelection button {
+    display: flex;
+    height: 64px;
+    width: 64px;
+    border: 2px solid #8700A9;
+    border-radius: 64px;
+    background-color: white;
+    margin: 0 8px;
+}
+
+.valueCardsSelection img {
+    height: 32px;
+    width: 32px;
+    margin: auto auto;
+}
+
+/* Responsividade */
+
+/* Mobile */
+@media screen and (min-width: 320px) and (max-width: 768px) {
+
+    .coreValuesContainer {
+        padding-bottom: 16px;
+        background-position: top left 50px;
+        background-size: 110%;
+    }
+
+    .valueCardsContainer {
+        display: none;
+    }
+
+    .valueCardsContainerMobile {
+        display: block;
+    }
+
+}
+
+/* Tablets */
+@media screen and (min-width: 480px) and (max-width: 768px) {
+
+    .valueCardsSelection button {
+        margin: 0 18px;
+    }
+
+    .valueCardsSelection p {
+        font-size: 16px;
+        font-weight: lighter;
+    }
+
+}
+
+/* Laptops */
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+
+    .valueCardsContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
