style(Home): ajustes de estilização do global.css para componentes

--- a/site_signal/src/components/AboutUs/aboutUs.css
+++ b/site_signal/src/components/AboutUs/aboutUs.css
@@ -16,10 +16,12 @@
 .aboutTextContainer h2 {
     text-align: left;
     margin-top: 40px;
+    padding-left: 0px;
 }
 
 .aboutTextContainer h1 {
     text-align: left;
+    padding-left: 0px;
 }
 
 .aboutTextContainer p {
@@ -47,6 +49,12 @@
 /** Mobile **/
 
 @media screen and (min-width: 320px) and (max-width: 1023px) {
+
+    .aboutTextContainer h1, .aboutTextContainer h2 {
+        padding-left: 0px;
+        text-align: center;
+    }
+
     .aboutImg {
         margin-right: 0px;
     }
@@ -65,16 +73,6 @@
 
     .aboutTextContainer p {
         font-size: 20px;
-    }
-
-    .aboutTextContainer h1 {
-        font-size: 30px;
-        text-align: center;
-    }
-
-    .aboutTextContainer h2 {
-        font-size: 25px;
-        text-align: center;
     }
 
     #aboutMobileImg{
@@ -98,12 +96,9 @@
 /** Laptops: Large Screen **/
 
 @media screen and (min-width: 1024px) and (max-width: 1366px) {
-    .aboutTextContainer h1 {
-        font-size: 40px;
-    }
 
-    .aboutTextContainer h2 {
-        font-size: 30px;
+    .aboutTextContainer h1, .aboutTextContainer h2 {
+        padding-left: 0px;
     }
     
     .aboutTextContainer p {
