--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -16,16 +16,47 @@
     font-size: 48px;
     font-weight: bold;
     color: #610C7D;
-    text-align: center;
-    padding-bottom: 24px;
+    padding: 0 5% 24px 5%;
 }
 
 .subtitle {
     color: #9C9C9C;
     font-family:"Saira";
     font-size: 32px;
-    text-align: center;
     font-weight: lighter;
+    padding: 0 5% 0 5%;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .title {
+        font-size: 28px;
+    }
+
+    .subtitle {
+        font-size: 20px;
+    }
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .title {
+        font-size: 36px;
+    }
+
+    .subtitle {
+        font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+    .title {
+        font-size: 40px;
+    }
+
+    .subtitle {
+        font-size: 26px;
+    }
 }
 
 /* Estilização do container de particulas */
@@ -53,7 +84,7 @@
     border: 2px solid #8700A9;
     border-radius: 30px;
     padding: 4px 40px 4px 40px;
-    z-index: 1;
+    z-index: 2;
     font-family: "Saira";
     font-size: 28px;
 }
@@ -70,7 +101,7 @@
     border: 2px solid #8700A9;
     border-radius: 30px;
     padding: 8px 40px 8px 40px;
-    z-index: 1;
+    z-index: 2;
     font-family: "Saira";
     font-size: 28px;
 }
@@ -80,13 +111,18 @@
     background-color: #6A0085;
 }
 
+.buttonPurple2 img {
+    width: 20px;
+    margin-left: 8px;
+}
+
 .buttonWhite {
     color: white;
     text-decoration: none;
     border: 2px solid white;
     border-radius: 30px;
     padding: 8px 40px 8px 40px;
-    z-index: 1;
+    z-index: 2;
     background: none;
     font-family: "Saira";
     font-size: 28px;
@@ -118,6 +154,45 @@
         font-size: 12px;
         padding: 8px 32px 8px 32px;
     }
+}
+
+/* Cards */
+
+.cardMobile {
+    box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4);
+    height: 336px;
+    background-color: white;
+    border-radius: 30px;
+    text-align: left;
+    margin: 32px 16px 40px 16px;
+    padding: 20px;
+    font-family: "Scada";
+    color: #707070;
+}
+
+.cardMobile h1 {
+    width: fit-content;
+    color: #610C7D;
+    border-bottom: #610C7D 7px solid;
+    margin: 20px 0;
+    font-weight: bolder;
+}
+
+.cardMobile p {
+    font-size: 18px;
+    text-align: justify;
+}
+
+.cardMobile img {
+    width: 56px;
+}
+
+.cardMobile img:last-of-type{
+    width: 50%;
+    position: absolute;
+    margin-left: 25%;
+    z-index: 0;
+    opacity: 0.2;
 }
 
 /* Text Input */
