--- a/site_signal/src/components/HomeHeader/homeHeader.css
+++ b/site_signal/src/components/HomeHeader/homeHeader.css
@@ -56,6 +56,11 @@
     color: white;
 }
 
+.headerSocialMediaContainer img:hover {
+    transform: scale(1.3);
+    transition: transform 0.5s;
+}
+
 .headerBorder {
     width: 100%; 
     position: relative;
