--- a/site_signal/src/components/Partners/partners.css
+++ b/site_signal/src/components/Partners/partners.css
@@ -4,6 +4,7 @@
 
 .partnersContainer h1 {
     margin-top: 32px;
+    text-align: center;
 }
 
 .partnersLogo div {
@@ -78,16 +79,24 @@
         margin-right: 32px;
     }
 
+    #uffrjMark {
+        width: 96px;
+    }
+
     #brasilJrMark {
-        width: 156px;
+        width: 128px;
+    }
+
+    #rioJrMark {
+        width: 96px;
     }
 
     #totvsMark {
-        width: 180px;
+        width: 140px;
     }
     
     .partnersLogo div:last-child img {
-        width: 320px;
+        width: 240px;
     }
     
 }
