--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -7,12 +7,16 @@
     z-index: 1;
 }
 
+.App {
+    overflow-x: hidden;
+}
+
 .title {
     font-family:"Scada";
     font-size: 48px;
     font-weight: bold;
     color: #610C7D;
-    padding: 0 0px 24px 0px;
+    padding: 0 5% 24px 5%;
 }
 
 .subtitle {
@@ -20,13 +24,13 @@
     font-family:"Saira";
     font-size: 32px;
     font-weight: lighter;
+    padding: 0 5% 0 5%;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
     .title {
         font-size: 28px;
-        padding: 0 5% 24px 5%;
     }
 
     .subtitle {
@@ -38,7 +42,6 @@
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .title {
         font-size: 36px;
-        padding: 0 5% 24px 5%;
     }
 
     .subtitle {
@@ -49,7 +52,6 @@
 @media screen and (min-width: 769px) and (max-width: 1200px) {
     .title {
         font-size: 40px;
-        padding: 0 5% 24px 5%;
     }
 
     .subtitle {
@@ -126,12 +128,26 @@
     font-size: 28px;
 }
 
+.buttonWhite img {
+    width: 20px;
+    margin-left: 4px;
+}
+
 .buttonWhite:hover {
     color: #8700A9;
+    fill: #8700A9;
     background-color: white;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .title {
+        font-size: 28px;
+    }
+
+    .subtitle {
+        font-size: 20px;
+    }
 
     .buttonWhite {
         border: 1px solid white;
@@ -142,41 +158,43 @@
 
 /* Cards */
 
-    .cardMobile {
-        box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4);
-        height: 336px;
-        background-color: white;
-        border-radius: 30px;
-        text-align: left;
-        margin: 32px 16px 40px 16px;
-        padding: 20px;
-        font-family: "Scada";
-        color: #707070;
-    }
+.cardMobile {
+    box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4);
+    height: 336px;
+    background-color: white;
+    border-radius: 30px;
+    text-align: left;
+    margin: 32px 16px 40px 16px;
+    padding: 20px;
+    font-family: "Scada";
+    color: #707070;
+}
 
-    .cardMobile h1 {
-        width: fit-content;
-        color: #610C7D;
-        border-bottom: #610C7D 7px solid;
-        margin: 20px 0;
-        font-weight: bolder;
-    }
+.cardMobile h1 {
+    width: fit-content;
+    color: #610C7D;
+    border-bottom: #610C7D 7px solid;
+    margin: 20px 0;
+    font-weight: bolder;
+}
 
-    .cardMobile p {
-        font-size: 18px;
-        text-align: justify;
-    }
+.cardMobile p {
+    font-size: 18px;
+    text-align: justify;
+}
 
-    .cardMobile img {
-        width: 56px;
-    }
+.cardMobile img {
+    width: 56px;
+}
 
-    .cardMobile img:last-of-type{
-        width: 50%;
-        position: absolute;
-        margin-left: 25%;
-        z-index: 0;
-        opacity: 0.2;
-    }
+.cardMobile img:last-of-type{
+    width: 50%;
+    position: absolute;
+    margin-left: 25%;
+    z-index: 0;
+    opacity: 0.2;
+}
+
+/* Text Input */
 
 /*Modifique a partir daqui */
