style(PG-Team): ajustando detalhes de responsividade

--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -16,7 +16,7 @@
     font-size: 48px;
     font-weight: bold;
     color: #610C7D;
-    padding: 0 5% 24px 5%;
+    padding: 0% 5% 24px 5%;
 }
 
 .subtitle {
