--- a/site_signal/src/components/TeamPage/AboutMEJ/about-mej.css
+++ b/site_signal/src/components/TeamPage/AboutMEJ/about-mej.css
@@ -3,9 +3,13 @@
     display: flex;
     text-align: right;
     color: #9C9C9C;
-    padding: 5%;
+    padding: 5% 5% 5% 0%;
     font-size: 24px;
     align-items: center;
+}
+
+.aboutMEJContainer p{
+    padding-left: 5%;
 }
 
 .aboutMEJContainer div:first-of-type {
@@ -13,6 +17,7 @@
 }
 .aboutMEJImg img{
     width: 380px;
+    margin-left: 25%;
 }
 
 /* 320px — 480px: Mobile devices
