--- a/site_signal/src/components/TeamPage/TeamList/teamList.css
+++ b/site_signal/src/components/TeamPage/TeamList/teamList.css
@@ -159,7 +159,7 @@
 
     .teamListContainer h1 {
         margin-bottom: 16px;
-        font-size: 18px;
+        /* font-size: 18px; */
     }
 
     .listContainer {
@@ -198,9 +198,9 @@
         background-size: 0;
     }
 
-    .teamListContainer h1 {
+    /* .teamListContainer h1 {
         font-size: 25px;
-    }
+    } */
 
     .memberListAvatar img {
         width: 72px;
@@ -233,9 +233,9 @@
 /** Responsividade: Laptops **/
 
 @media screen and (min-width: 769px) and (max-width: 1060px) {
-    .teamListContainer h1 {
+    /* .teamListContainer h1 {
         font-size: 30px;
-    }
+    } */
 }
 
 @media screen and (min-width: 1061px) and (max-width: 1200px) {
